tests/baselines/reference/ambientDeclarationsPatterns_tooManyAsterisks.errors.txt
ambientDeclarationsPatterns_tooManyAsterisks.ts(1,16): error TS5061: Pattern 'too*many*asterisks' can have at most one '*' character.


==== ambientDeclarationsPatterns_tooManyAsterisks.ts (1 errors) ====
    declare module "too*many*asterisks" { }
                   ~~~~~~~~~~~~~~~~~~~~
!!! error TS5061: Pattern 'too*many*asterisks' can have at most one '*' character.
    